--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,14 +7,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div>
+    <h1 style="text-align: center;">hola mundo querido precioso</h1>
   </div>
+
+  <div> <h1 class="titulo" style="text-align: center;">{{Saludo}}</h1></div>
+
+  <div>
+    <ion-button color="primary" routerLink="/pagina1">Pagina 1</ion-button>
+    <ion-button color="secondary" (click)="irPagina2()">pagina 2</ion-button>
+    <ion-button color="tertiary" (click)="irPagina3()">pagina 3</ion-button>
+  </div>
+
+
 </ion-content>
