--- a/src/app/pages/pagina2/pagina2.page.html
+++ b/src/app/pages/pagina2/pagina2.page.html
@@ -5,5 +5,15 @@
 </ion-header>
 
 <ion-content>
-
+<ion-content>
+  <h1 style="text-align: center;">¿Olvidó su contraseña?</h1>
+  <div>
+    <ion-item class="usuario">
+      <ion-label position="floating">Usuario</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 </ion-content>
