--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,15 +9,17 @@
 <ion-content [fullscreen]="true">
 
   <div>
-    <h1 style="text-align: center;">hola mundo querido precioso</h1>
+    <h1 style="text-align: center;">TeLlevoAPP</h1>
   </div>
 
-  <div> <h1 class="titulo" style="text-align: center;">{{Saludo}}</h1></div>
+  <div>
+    <h1 class="titulo" style="text-align: center;">{{Saludo}}</h1>
+  </div>
 
   <div>
-    <ion-button color="primary" routerLink="/pagina1">Pagina 1</ion-button>
-    <ion-button color="secondary" (click)="irPagina2()">pagina 2</ion-button>
-    <ion-button color="tertiary" (click)="irPagina3()">pagina 3</ion-button>
+    <ion-button color="primary" routerLink="/pagina1">Registrate</ion-button>
+    <ion-button color="secondary" routerLink="/pagina2">Iniciar sesión </ion-button>
+    <ion-button color="tertiary" routerLink="/pagina3">Obtener codigo </ion-button>
   </div>
 
 
